fix: Fix some spacing inconsistencies

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,10 @@ h1 {
   margin-bottom: 2rem;
 }
 
+h2 {
+  margin-bottom: 1rem;
+}
+
 .team,
 .services,
 .faq {
